learn more jumping on hover fixed

--- a/src/index.css
+++ b/src/index.css
@@ -54,21 +54,6 @@ body {
 }
 
 
-/* Safari reactiveness */
-@media not all and (min-resolution:.001dpcm) { @media {
-
-    .App { 
-        padding-bottom: 30rem;
-    }
-
-    @media screen and (max-width: 770px) {
-        .App {
-            padding-bottom: 33rem;
-        }
-    }
-}}
-
-
 /* firefox reactiveness */
 @-moz-document url-prefix() { 
     .App { 
